# mcp_app_stocks

./: README.md  pyproject.toml
src/stock_tracker/: server.py
