[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-stock-tracker"
version = "0.1.0"
description = "MCP server providing real-time stock price tracking with an interactive dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "stocks", "finance", "dashboard", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-stock-tracker"
Documentation = "https://github.com/yourusername/mcp-stock-tracker#readme"
Repository = "https://github.com/yourusername/mcp-stock-tracker"
Issues = "https://github.com/yourusername/mcp-stock-tracker/issues"

[project.scripts]
stock-tracker = "stock_tracker.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_tracker"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
